--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-	"name": "digitalwerk/content-element-registry",
+	"name": "devskio/content-element-registry",
 	"type": "typo3-cms-extension",
 	"description": "Content element registry - helper for registering Typo3 content elements",
-	"version": "12.0.5",
+	"version": "12.1.0",
 	"license": "GPL-2.0-or-later",
 	"require": {
 		"typo3/cms-core": ">=12.0.0 <12.9.9"
 	},
 	"autoload": {
 		"psr-4": {
-			"Digitalwerk\\ContentElementRegistry\\": "Classes"
+			"Devsk\\ContentElementRegistry\\": "Classes"
 		}
 	},
 	"extra": {
@@ -18,14 +18,14 @@
 		}
 	},
 	"replace": {
-		"digitalwerk/content_element_registry": "self.version",
+		"devsk/content_element_registry": "self.version",
 		"typo3-ter/content-element-registry": "self.version"
 	},
 	"authors": [
 		{
-			"name": "Ondrej Grosko",
-			"email": "ondrej@digitalwerk.agency",
-			"homepage": "https://digitalwerk.agency/"
+			"name": "DEVSK Team",
+			"email": "development@devsk.io",
+			"homepage": "https://www.devsk.io/"
 		}
 	]
 }
